more fix on mobile UI

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body,
   background-color: #fdfbec;
   @apply text-black;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 :root {
